@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-22T02:06:17Z",
-  "count_outdated" : 2431,
-  "uniques_outdated" : 601,
-  "count" : 2468,
-  "uniques" : 623,
+  "timestamp" : "2022-09-22T08:28:27Z",
+  "count_outdated" : 2433,
+  "uniques_outdated" : 603,
+  "count" : 2470,
+  "uniques" : 625,
   "clones" : [
-    {
-      "timestamp": "2022-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-09T00:00:00Z",
       "count": 3,
@@ -102,6 +95,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
