@@ -1,12 +1,7 @@
 {
   "count": 37,
-  "uniques": 9,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-09-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-09T00:00:00Z",
       "count": 3,
@@ -71,6 +66,11 @@
       "timestamp": "2022-09-21T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
