@@ -1,3 +1,11 @@
+2022-09-22T08:28:27Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3103943455
+* notice: last 14d: unq all: 8 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 601 2431 / 623 2468
+* notice: next accum: outdated-unq outdated-all / unq all: 603 2433 / 625 2470
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-09-08] / [2022-09-22]
+
 2022-09-22T02:06:17Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3102374997
 * notice: last 14d: unq all: 9 37
